# wol-libvirt-gateway

./: Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: rust.yml
packaging/nix/: module.nix  overlay.nix  package.nix  shell.nix
packaging/systemd/: wol-libvirt-gateway.service
src/: domain_xml.rs  error.rs  libvirt.rs  main.rs  server.rs  tests.rs  wakeonlan.rs
